--- a/src/locale/zhHK.json
+++ b/src/locale/zhHK.json
@@ -981,6 +981,16 @@
     },
     "Transaction": {
       "Title": "Transaction"
+    },
+    "QrCode":{
+      "Title":"QR Code",
+      "Device": {
+        "Title":"Device",
+        "Caption":"Use Beamco Artist on Web by Scanning the QR Code to Sign in",
+        "Button":"Scan Now",
+        "LinkedTitle": "Linked Devices",
+        "EmptyStateLinked":"You have no linked devices"
+      }
     }
   },
   "Music": {
