--- a/src/locale/zhHK.json
+++ b/src/locale/zhHK.json
@@ -985,7 +985,7 @@
     "QrCode":{
       "Title":"QR Code",
       "Device": {
-        "Title":"Device",
+        "Title":"Devices",
         "Caption":"Use Beamco Artist on Web by Scanning the QR Code to Sign in",
         "Button":"Scan Now",
         "LinkedTitle": "Linked Devices",
