BEAM-1087: Update when list is empty

--- a/src/locale/zhHK.json
+++ b/src/locale/zhHK.json
@@ -524,7 +524,7 @@
       "CreatedBy": "製作的",
       "NoPlaylist": "No Playlist have been made",
       "NoMusician": "您尚未對任何音樂人作出貢獻",
-      "NoMusicianOther": "This user don’t have contributions to any musicians",
+      "NoMusicianOther": "This user don’t have contributions to any artists",
       "NoBadge": "你尚未有任何徽章",
       "NoBadgeOther": "This user don’t have any badges"
     },
