--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -168,8 +168,8 @@
       "View": "View",
       "ModalInfo": {
         "Title": "Release Your Album!",
-        "Subtitle1": "To Release your album, you need to login to ",
-        "Subtitle2": " and fill your release information"
+        "Subtitle1": "To launch your album, please sign here ",
+        "Subtitle2": " using desktop mode and complete the release details."
       }
     },
     "OverviewCard": {
@@ -991,14 +991,14 @@
     "Transaction": {
       "Title": "Transaction"
     },
-    "QrCode":{
-      "Title":"QR Code",
+    "QrCode": {
+      "Title": "QR Code",
       "Device": {
-        "Title":"Devices",
-        "Caption":"Use Beamco Artist on Web by Scanning the QR Code to Sign in",
-        "Button":"Scan Now",
+        "Title": "Devices",
+        "Caption": "Use Beamco Artist on Web by Scanning the QR Code to Sign in",
+        "Button": "Scan Now",
         "LinkedTitle": "Linked Devices",
-        "EmptyStateLinked":"You have no linked devices"
+        "EmptyStateLinked": "You have no linked devices"
       }
     }
   },
