--- a/src/locale/zhHK.json
+++ b/src/locale/zhHK.json
@@ -166,9 +166,9 @@
       "Title": "如何上傳音樂",
       "View": "查看",
       "ModalInfo": {
-        "Title": "發布您的專輯！",
-        "Subtitle1": "為了發行您的專輯，請在這裡簽名 ",
-        "Subtitle2": " 使用桌面模式並完成發行詳情。"
+        "Title": "在Beamco上發布您的音樂！",
+        "Subtitle1": "要發布您的音樂，請在桌面上登入這個網址 ",
+        "Subtitle2": " 並填寫完整的發布細節！"
       }
     },
     "OverviewCard": {
