--- a/src/locale/zhHK.json
+++ b/src/locale/zhHK.json
@@ -593,9 +593,9 @@
       "Ticket": "票務",
       "Event": "現場"
     },
-    "ShowAppreciate": "Show your appreciation",
-    "SendTip": "Send tip to support your favorite artist to see them growth",
-    "EmptyStateFans": "Artist do not have any fans."
+      "ShowAppreciate": "表達您的欣賞",
+      "SendTip": "給您喜愛的藝術家發送小費，支持他們的成長",
+      "EmptyStateFans": "藝術家沒有任何粉絲。"
   },
   "ExclusiveContent": {
     "Title": "獨家內容",
@@ -989,16 +989,16 @@
     "Transaction": {
       "Title": "交易"
     },
-    "QrCode": {
-      "Title": "QR Code",
-      "Device": {
-        "Title": "Devices",
-        "Caption": "Use Beamco Artist on Web by Scanning the QR Code to Sign in",
-        "Button": "Scan Now",
-        "LinkedTitle": "Linked Devices",
-        "EmptyStateLinked":"You have no linked devices",
-        "Tips":"Tap Devices to Log Out",
-        "onScannerCaption":"Open {{link}} to scan and linked the devices"
+	"QrCode": {
+  	"Title": "QR Code",
+ 	   "Device": {
+ 	     "Title": "裝置",
+ 	     "Caption": "掃描 QR 碼以在 Beamco Artist 網頁上登錄",
+ 	     "Button": "立即掃描",
+  	   "LinkedTitle": "已連接的裝置",
+ 	     "EmptyStateLinked": "您尚未連接任何裝置",
+ 	     "Tips": "點擊「裝置」以登出",
+ 	     "onScannerCaption": "打開 {{link}} 以掃描並連接裝置"
       }
     }
   },
