--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -506,7 +506,8 @@
       "LineUp": "LINE UP",
       "TopTiper": "TOP BEAMERS",
       "TipDistribution": "Beam Distribution",
-      "MusicianTipped": "Artist Beamed"
+      "MusicianTipped": "Artist Beamed",
+      "Perform": "I want to Perform!"
     },
     "Live": "Live",
     "EmptyState": {
@@ -998,9 +999,9 @@
         "Caption": "Use Beamco Artist on Web by Scanning the QR Code to Sign in",
         "Button": "Scan Now",
         "LinkedTitle": "Linked Devices",
-        "EmptyStateLinked":"You have no linked devices",
-        "Tips":"Tap Devices to Log Out",
-        "onScannerCaption":"Open {{link}} to scan and linked the devices"
+        "EmptyStateLinked": "You have no linked devices",
+        "Tips": "Tap Devices to Log Out",
+        "onScannerCaption": "Open {{link}} to scan and linked the devices"
       }
     }
   },
