add empty state feed

--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -1569,5 +1569,8 @@
     "SwipeUp": "Swipe Up To Beam",
     "TooFast": "You swipe to fast!",
     "EnjoyShow": "Let’s enjoy the show\nand take a rest for few second"
+  },
+  "DiscoverArtist":{
+    "Title":"Discover Artist"
   }
 }
