update empty post to create post

--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -445,7 +445,8 @@
       "Exclusive": "Exclusive",
       "Public": "Public"
     },
-    "NoMore": "No more feeds"
+    "NoMore": "No more feeds",
+    "EmptyStateButtonCaption":"Create New Post!"
   },
   "Event": {
     "Title": "Action",
