feat: update translation

--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -1223,9 +1223,9 @@
   },
   "TopUp": {
     "Title": "Credits",
-    "Subtitle1": "BEAMCO Credits is your way to show your appreciation",
-    "Subtitle2": "BEAMCO Credits allows you to parcitipate in Artists upside and grow their community",
-    "Subtitle3": "Find Artist who is providing a lot of value? Rewards them with BEAMCO Credits as a support",
+    "Subtitle1": "Use Credits to Support and Engage with Your Favourite Artists",
+    "Subtitle2": "Beamco Credits allow you to participate in our Artist’s journey and join our rankings",
+    "Subtitle3": "Find an Artist you love? Reward them with Beamco Credits as support",
     "MyCoin": "My Credits",
     "ButtonWithdraw": "Withdraw",
     "Filter": {
