feat: check voucher in event detail

--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -27,7 +27,8 @@
     "BeamedYou": "Beamed you ",
     "StartSub": "Subscribed for ",
     "Appreciate": "Appreciate!",
-    "Appreciated": "Appreciated!"
+    "Appreciated": "Appreciated!",
+    "BuyNow": "Buy Now"
   },
   "Onboarding": {
     "Step1": {
@@ -518,7 +519,19 @@
       "MusicianTipped": "Artist Beamed",
       "Perform": "Pick Me!",
       "MailTitle": "I'd like to perform at the next Beamco Live!",
-      "MailBody": "Simply hit send to this email to register your interest in performing at the next Beamco Live! The Beamco Concierge will get in touch with you soon!"
+      "MailBody": "Simply hit send to this email to register your interest in performing at the next Beamco Live! The Beamco Concierge will get in touch with you soon!",
+      "LimitedOffer": "Limited Offer",
+      "Freebies": "FREEBIES!",
+      "Popup": {
+        "TitleReward": "Get a limited time reward!",
+        "SubtitleReward": "Top-up 540 credits to get a limited time voucher as a reward!",
+        "Package1": {
+          "Title": "Buy our $88 package now to get",
+          "Subtitle1": "2 drinks",
+          "Subtitle2": "540 BEAMCO credits",
+          "Subtitle3": "2 VIP concert tickets when you become the top Beamer"
+        }
+      }
     },
     "Live": "Live",
     "EmptyState": {
