BEAM-1316: Add new translations

--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -1590,5 +1590,78 @@
   },
   "DiscoverArtist": {
     "Title": "Discover Artist"
+  },
+  "Coachmark": {
+    "Skip": "Skip",
+    "Next": "Next",
+    "Previous": "Previous",
+    "Finish": "Finish",
+    "Credit": "Credit",
+    "SubtitleCredit": "Place where you can withdraw, view Beam & Subscribe report",
+    "Live": "Live",
+    "SubtitleLive": "You can view schedule of live event here",
+    "Overview": "Overview",
+    "SubtitleOverview": "Place where you can view summary of your income, fans, total exclusive post, total of public post, total songs and album",
+    "CreateNewPost": "Create New Post",
+    "SubtitleCreateNewPost": "Place where you can create your own public and exclusive content",
+    "UploadMusic": "How to Upload Music",
+    "SubtitleUploadMusic": "This is information guide about how to upload music from dashboard app",
+    "FansAnalytic": "Fans Analytic",
+    "SubtitleFansAnalytic": "Summary of your fans behavior and demography",
+    "FansGrowth": "Fans Growth",
+    "SubtitleFansGrowth": "Report of your fans growth by fans earned and followers become fans",
+    "TopFans": "Your Top Fans",
+    "SubtitleTopFans": "Report of your top fans ranking based on their contribution",
+    "FansInteraction": "Fans Interaction",
+    "SubtitleFansInteraction": "Percentage of fans interaction with your content",
+    "FansAge": "Fans Age",
+    "SubtitleFansAge": "Percentage of your fans sorted by age",
+    "FansGender": "Fans Gender",
+    "SubtitleFansGender": "Percentage of your fans sorted by gender",
+    "FansCountry": "Fans Country",
+    "SubtitleFansCountry": "Total of your fans based on country",
+    "Income": "Income",
+    "SubtitleIncome": "Monitor your beam income here",
+    "Beam&Sub": "Beam & Sub Earned",
+    "SubtitleBeam&Sub": "Monitor your Beam and sub income here",
+    "MyIncome": "My Income",
+    "SubtitleMyIncome": "You can view of Beam and subscription trend to help your engagement decision",
+    "PostTab": "Post Tab",
+    "SubtitlePostTab": "View analytic from your post activity and engagement",
+    "PopularPost": "Popular Post",
+    "SubtitlePopularPost": "View your popular post based on filter",
+    "PostEngagementRate": "Post Engagement Rate",
+    "SubtitlePostEngagementRate": "Measure how is your engagement rate in every post you create",
+    "MyMusic": "My Music",
+    "SubtitleMyMusic": "You can view your album and song summary",
+    "PopularAlbum": "Popular Album",
+    "SubtitlePopularAlbum": "This is your most popular album among your audience",
+    "TopSong": "Top Song",
+    "SubtitleTopSong": "This is your top song based on like and stream",
+    "ActiveListener": "Your Active Listener",
+    "SubtitleActiveListener": "You can view your active listener, average listener streamed and fans stream you song based on filter",
+    "ListenerCountry": "Listener Country",
+    "SubtitleListenerCountry": "Your audience demography based on country",
+    "ListenerAlsoLike": "Listener Also Like",
+    "SubtitleListenerAlsoLike": "Similar artists that your fans listen into",
+    "Discover": "Discover",
+    "SubtitleDiscover": "The place where you can keep updated about the community",
+    "ComingSoon": "Coming Soon",
+    "SubtitleComingSoon": "This is the list of upcoming album, stay tune!",
+    "TopSongs": "Top Songs",
+    "SubtitleTopSongs": "Try to expand your music horizon by listen to the top song chart where most of the fans listen into it",
+    "NewSong": "New Song",
+    "SubtitleNewSong": "Try new release from another musician by exploring new songs here",
+    "Playlist": "Playlist",
+    "SubtitlePlaylist": "Explore new songs and expand your music horizon",
+    "TwoPost": "There are two post",
+    "PublicContent": "Public Content",
+    "SubtitlePublicContent": "When you post public content, it will visible for all of your followers",
+    "ExclusiveContent": "Exclusive Content",
+    "SubtitleExclusiveContent": "When you post for exclusive content it will only visible to the one who subscribed your content",
+    "TypeContent": "Type your content",
+    "SubtitleTypeContent": "Express your self, tell what happens to your fans",
+    "Category": "Category",
+    "SubtitleCategory": "Select category situation about your post and tap post to post your feed"
   }
 }
