--- a/src/locale/zhHK.json
+++ b/src/locale/zhHK.json
@@ -1585,5 +1585,78 @@
   },
   "DiscoverArtist": {
     "Title": "Discover Artist"
+  },
+  "Coachmark": {
+    "Skip": "跳過",
+    "Next": "下一個",
+    "Previous": "上一项",
+    "Finish": "完成",
+    "Credit": "信用",
+    "SubtitleCredit": "提款、查看 Beam 及订阅报告的地方",
+    "Live": "現場",
+    "SubtitleLive": "您可以在此查看現場活動的時間表",
+    "Overview": "概覽",
+    "SubtitleOverview": "您可以在此查看您的收入、粉絲數、總獨家帖子、公共帖子總數、歌曲和專輯總數的摘要",
+    "CreateNewPost": "創建新帖",
+    "SubtitleCreateNewPost": "這是您可以創建自己的公共和獨家內容的地方",
+    "UploadMusic": "如何上傳音樂",
+    "SubtitleUploadMusic": "這是有關如何從儀表板應用程式上傳音樂的信息指南",
+    "FansAnalytic": "粉絲分析",
+    "SubtitleFansAnalytic": "您的粉絲行為和人口統計的摘要",
+    "FansGrowth": "粉絲增長",
+    "SubtitleFansGrowth": "您的粉絲增長報告，由獲得的粉絲和追隨者變成粉絲組成",
+    "TopFans": "您的頂級粉絲",
+    "SubtitleTopFans": "基於他們的貢獻報告您的頂級粉絲排名",
+    "FansInteraction": "粉絲互動",
+    "SubtitleFansInteraction": "粉絲與您的內容互動的百分比",
+    "FansAge": "粉絲年齡",
+    "SubtitleFansAge": "按年齡排序的粉絲百分比",
+    "FansGender": "粉絲性別",
+    "SubtitleFansGender": "按性別排序的粉絲百分比",
+    "FansCountry": "粉絲國家",
+    "SubtitleFansCountry": "基於國家的粉絲總數",
+    "Income": "收入",
+    "SubtitleIncome": "在这里监控您的 Beam 收入",
+    "Beam&Sub": "Beam 和订阅所赚取的",
+    "SubtitleBeam&Sub": "在这里监控您的 Beam 和订阅收入",
+    "MyIncome": "我的收入",
+    "SubtitleMyIncome": "您可以查看 Beam 和订阅趋势，以帮助您做出参与决策",
+    "PostTab": "帖子選項卡",
+    "SubtitlePostTab": "查看您的帖子活動和參與度的分析",
+    "PopularPost": "熱門帖子",
+    "SubtitlePopularPost": "根据筛选查看您的热门帖子",
+    "PostEngagementRate": "帖子參與率",
+    "SubtitlePostEngagementRate": "測量您在每個帖子中的參與率",
+    "MyMusic": "我的音乐",
+    "SubtitleMyMusic": "您可以查看您的專輯和歌曲摘要",
+    "PopularAlbum": "熱門專輯",
+    "SubtitlePopularAlbum": "這是您在觀眾中最受歡迎的專輯",
+    "TopSong": "最受歡迎的歌曲",
+    "SubtitleTopSong": "這是基於喜歡和串流的您的最受歡迎的歌曲",
+    "ActiveListener": "您的活跃听众",
+    "SubtitleActiveListener": "您可以根据筛选条件查看您的活跃听众、平均听众流量和粉丝流量",
+    "ListenerCountry": "听众国家",
+    "SubtitleListenerCountry": "基于国家的听众人口统计",
+    "ListenerAlsoLike": "听众还喜欢",
+    "SubtitleListenerAlsoLike": "您的粉丝也喜欢的相似艺术家",
+    "Discover": "发现",
+    "SubtitleDiscover": "这是您可以获取社群最新资讯的地方",
+    "ComingSoon": "即将推出",
+    "SubtitleComingSoon": "这是即将推出的专辑列表，请保持关注！",
+    "TopSongs": "最热门歌曲",
+    "SubtitleTopSongs": "尝试扩展您的音乐视野，听听最热门的歌曲排行榜，大多数粉丝都在听",
+    "NewSong": "新歌曲",
+    "SubtitleNewSong": "通过在这里探索新歌曲，尝试其他音乐家的新作品",
+    "Playlist": "歌单",
+    "SubtitlePlaylist": "探索新歌曲，扩展您的音乐视野",
+    "TwoPost": "有两个帖子",
+    "PublicContent": "公开内容",
+    "SubtitlePublicContent": "当您发布公开内容时，将对所有关注者可见",
+    "ExclusiveContent": "独家内容",
+    "SubtitleExclusiveContent": "当您发布独家内容时，只有已订阅您内容的人才能看见",
+    "TypeContent": "输入您的内容",
+    "SubtitleTypeContent": "表达自己，告诉您的粉丝发生了什么",
+    "Category": "分类",
+    "SubtitleCategory": "选择与您的帖子相关的分类，然后点击“发布”来发布您的内容"
   }
 }
