--- a/src/locale/zhHK.json
+++ b/src/locale/zhHK.json
@@ -525,7 +525,7 @@
         "TitleReward": "獲得有限時間的獎勵！",
         "SubtitleReward": "充值540學分以獲得有限時間的優惠券作為獎勵！",
         "Package1": {
-          "Title": "限時優惠！現只需$88便可獲得 to get",
+          "Title": "限時優惠！現只需$88便可獲得",
           "Subtitle1": "2 杯飲品",
           "Subtitle2": "540 BEAMCO 幣",
           "Subtitle3": "2張VIP演唱會門票（當你成為最佳Beamer)"
@@ -551,15 +551,15 @@
       "Title": "Vouchers Available",
       "EmptyState": "You don’t have any vouchers yet. You can get them by purchasing some credits!"
     },
-    "DetailVoucher":{
+    "DetailVoucher": {
       "Title": "Reward Details",
-      "PopUp":{
+      "PopUp": {
         "Title": "Congratulations!",
-        "Desc":"Here’s the QR code to redeem your free drink(s) at the bar.",
-        "ButtonTitle":"Dismiss"
+        "Desc": "Here’s the QR code to redeem your free drink(s) at the bar.",
+        "ButtonTitle": "Dismiss"
       },
       "Expired": "Valid Until",
-      "Tnc":"Terms & Conditions"
+      "Tnc": "Terms & Conditions"
     }
   },
   "Profile": {
