BEAM-00: Fix empty line up in detail event screen

--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -547,6 +547,10 @@
       "TopTipper": {
         "Title": "Top Beamers Are Displayed Here",
         "Subtitle": "Wait until event goes live to view the top Beamers"
+      },
+      "LineUp": {
+        "Title": "Artist Unleashing Soon!",
+        "Subtitle": "Stay tuned for exciting artist announcements!"
       }
     },
     "ListVoucher": {
