add some translate

--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -600,6 +600,11 @@
       "Photos": "Add Photos"
     }
   },
+  "Rewards": {
+    "Title": "Rewards",
+    "Reward": "Rewards",
+    "Mission": "Mission"
+  },
   "Musician": {
     "Label": {
       "Fans": "FANS",
