BEAM-1441: Create music component to share to socmed

--- a/src/locale/zhHK.json
+++ b/src/locale/zhHK.json
@@ -14,6 +14,7 @@
     "Listeners": "聽眾",
     "GotIt": "好的，我知道了",
     "Share": {
+      "Share": "分享",
       "Feed": "分享動態",
       "Album": "分享專輯",
       "Music": "分享音樂",
