BEAM-1485: Update component & add new translates

--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -1633,7 +1633,9 @@
   "LiveTipping": {
     "SwipeUp": "Swipe Up To Beam",
     "TooFast": "You swipe to fast!",
-    "EnjoyShow": "Let’s enjoy the show\nand take a rest for few second"
+    "EnjoyShow": "Let’s enjoy the show\nand take a rest for few second",
+    "Credit": "Credit",
+    "NowActive": "Now Active"
   },
   "DiscoverArtist": {
     "Title": "Discover Artist"
