--- a/src/locale/zhHK.json
+++ b/src/locale/zhHK.json
@@ -1628,7 +1628,9 @@
   "LiveTipping": {
     "SwipeUp": "向上滑動以發送",
     "TooFast": "滑動太快，請重新再試！",
-    "EnjoyShow": "讓我們盡情享受表演！"
+    "EnjoyShow": "讓我們盡情享受表演！",
+    "Credit": "餘額",
+    "NowActive": "Now Active"
   },
   "DiscoverArtist": {
     "Title": "Discover Artist"
