--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -622,6 +622,9 @@
     "DetailVoucher": {
       "QuotaLeft": "Quota Left",
       "RedeemRewards": "Redeem Rewards",
+      "Expired": "Expired",
+      "Redeemed": "Redeemed",
+      "RewardAchievement": "Reward Achievement",
       "ModalSuccess": {
         "Title": "Congrats! {{credit}} Credits have been claimed!",
         "Subtitle": "Collect more rewards and watch your earning grows!"
